@@ -16,6 +16,7 @@
 
 package com.mbrlabs.mundus.ui.widgets;
 
+import com.kotcrab.vis.ui.VisUI;
 import com.kotcrab.vis.ui.widget.VisLabel;
 import com.kotcrab.vis.ui.widget.VisTable;
 import com.kotcrab.vis.ui.widget.VisTextField;
