@@ -2,6 +2,7 @@
 - Implemented a undo/redo system for most operations
 - Implemented a shortcut system
 - The 3D viewport is now a UI widget and scales correctly with the window size
+- The inspector now spans the whole right side as sidebar
 - Implemented game object rotation via the transform section in the inspector
 - New lighting system for the terrain & entity shader
 - Child objects of a selected parent object will be highlighted now as well
